fixed bug where text was blurry when the modal was of certain dimensions

--- a/src/components/ModalManager/ModalManager.css
+++ b/src/components/ModalManager/ModalManager.css
@@ -13,14 +13,25 @@
 
 .ModalManager--modal {
   position: fixed;
-  top: 50%;
-  right: auto;
-  bottom: auto;
-  left: 50%;
+  /* top: 50%; */
+  /* right: auto; */
+  /* bottom: auto; */
+  /* left: 50%; */
+  top: 0;
+  width: 100%;
+  height: 100%;
   z-index: 1001;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   background-color: transparent;
   outline: none;
+}
+.ModalManager--wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .ModalManager--modalOverlay {
